--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Pages Site</title>
 </head>
-<body>
+<body background="green">
     <h1>Welcome to My GitHub Pages Site</h1>
     <p>This is a sample HTML page hosted on GitHub Pages.</p>
 </body>
