--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub Pages Site</title>
 </head>
-<body background="green">
+<body backgroundcolor="green" >
     <h1>Welcome to My GitHub Pages Site</h1>
+    <h2>Aka</h2>
     <p>This is a sample HTML page hosted on GitHub Pages.</p>
 </body>
 </html>
